--- a/TextDigger/src/app/admin/users/users.component.html
+++ b/TextDigger/src/app/admin/users/users.component.html
@@ -148,7 +148,7 @@
         </div>
         <div class="modal-footer">
   
-          <button class="btn btn-info btn mr-3" (click)="editUser(userview); typeUser=null;" data-dismiss="modal" data-toggle="modal" data-target="#newUser"><i class="fas fa-edit"></i> Edit</button>
+          <button class="btn btn-info btn mr-3" (click)="editUser(userview); userType=null;" data-dismiss="modal" data-toggle="modal" data-target="#newUser"><i class="fas fa-edit"></i> Edit</button>
           <button class="btn btn-info btn mr-3" (click)="activation(userview)" #activationButton data-toggle="modal" data-target="#activationUser"></button>
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
   
